# relobot

./: .gitattributes  .gitignore  AGENTS.md  BEM_MIGRATION.md  FLASHING.md  LICENSE  README.md  app.py  finddevice.py  identify_devices.py  review.md  run_firmware.sh  start_app_helper.sh  start_camera_calibration.sh  start_robot.sh  start_rviz2.sh  start_wheel_calibration.sh
.github/: copilot-instructions.md
.rviz2/: default.rviz
B0410_Tof_Firmware/aarch64/b0410_tof_firmware/: README.md
helpers/: Tof.dockerfile  readme.md  setup_aws_ssl.py
helpers/camera_calibration/: Dockerfile  README.md
helpers/joystic_test/: controller.py  joystic.py  joystic_example_usage.py
helpers/rviz2/: Dockerfile  readme.md
helpers/wheel_calibration/: README.md  calibrate.py  show_ticks.py
joystic/: .gitignore  joystic.py
pico_ware/: boot.py  code.py
pico_ware_imu/: boot.py  code.ino  code.py  readme.md
pico_ware_imu/ICM20948/: Arduino-ICM20948.cpp  InvBool.h
pico_ware_imu/arduino/: code.ino
pico_ware_imu/arduino/ICM20948/: Arduino-ICM20948.cpp
pico_ware_imu/lib/: deltat.py
pico_ware_imu/test_cube/: requirements.txt  test.py
pico_ware_imu_microros/: .gitignore  Dockerfile  README.md  build.sh  run.sh
pico_ware_imu_microros/src/: CMakeLists.txt  main.cpp  pico_uart_transports.h
pico_ware_imu_microros/src/ICM20948/: Arduino-ICM20948.cpp  DataConverter.h  Icm20948DataConverter.h
pico_ware_ina226_microros/: Dockerfile  README.md  build.sh  run.sh
pico_ware_ina226_microros/src/: CMakeLists.txt  main.cpp
pico_ware_knives/: boot.py  code.py
pico_ware_knives/calibration/: test.py
pico_ware_knives_microros/: README.md  run.sh
pico_ware_knives_microros/src/: CMakeLists.txt  main.cpp  pico_uart_transport.c  pid_controller.c  pid_controller.h
pico_ware_wheals/: boot.py  code.py
pico_ware_wheels/: README.md  code.py
pico_ware_wheels/calibration/: test.py
pico_ware_wheels_microros/: Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
pico_ware_wheels_microros/src/: CMakeLists.txt  calibration.cpp  main.cpp  pico_uart_transports.h
ros2_diff_drive_ws/: .gitignore  docker-compose.yml  readme.md
ros2_diff_drive_ws/src/diff_drive_hardware/: CMakeLists.txt  package.xml
ros2_diff_drive_ws/src/diff_drive_hardware/config/: diffbot.urdf.xacro  diffbot_controllers.yaml  diffbot_description.xacro
ros2_diff_drive_ws/src/diff_drive_hardware/diff_drive_hardware/: web_server_node.py
ros2_diff_drive_ws/src/diff_drive_hardware/include/diff_drive_hardware/: diff_drive_hardware.hpp
ros2_diff_drive_ws/src/diff_drive_hardware/launch/: diffbot.launch.py  test_diff_drive.launch.py
ros2_diff_drive_ws/src/diff_drive_hardware/src/: diff_drive_hardware.cpp
ros2_robot_control/: Dockerfile.dev  docker-compose.yml
ros2_robot_control/src/robot_control/: package.xml  setup.py
ros2_robot_control/src/robot_control/robot_control/: motor_controller_node.py  web_server_node.py
ros2_ws/: .gitignore  AGENTS.md  CameraRp.dockerfile  DiffDriveHardware.dockerfile  Dockerfile.dev  Frontend.dockerfile  FrontierExplorer.dockerfile  Imu.dockerfile  KnifeMotorController.dockerfile  Nav2.dockerfile  Rosbridge.dockerfile  Slam.dockerfile  Tof.dockerfile  WebServer.dockerfile  WebUI.dockerfile  docker-compose.yml  fastdds_localhost.xml  fastdds_profile.xml  healthcheck.sh  lidar.dockerfile  nav2.dockerfile  pointcloud_to_laserscan_params.yaml  readme.md  wait_for_topic.py
ros2_ws/src/: rosbridge_webvideo_launch.py
ros2_ws/src/arducam_rclpy_tof_pointcloud/: setup.py
ros2_ws/src/arducam_rclpy_tof_pointcloud/arducam_rclpy_tof_pointcloud/: tof_pointcloud.py
ros2_ws/src/arducam_rclpy_tof_pointcloud/config/: scan_filter_chain.yaml
ros2_ws/src/camera_ros/: CMakeLists.txt  package.xml
ros2_ws/src/camera_ros/calibration/: camera.yaml
ros2_ws/src/camera_ros/config/: apriltag.yaml
ros2_ws/src/camera_ros/launch/: camera.launch.py  camera_with_apriltag.launch.py
ros2_ws/src/camera_ros/scripts/: apriltag_manager.py  dock_pose_publisher.py  system_monitor.py
ros2_ws/src/camera_ros/src/: CameraNode.cpp  ParameterHandler.cpp  clamp.cpp  dock_pose_publisher.cpp  pv_to_cv.cpp
ros2_ws/src/diff_drive_hardware/: CMakeLists.txt  diff_drive_hardware.xml  package.xml
ros2_ws/src/diff_drive_hardware/config/: diffbot.urdf.xacro  diffbot_controllers.yaml  diffbot_description.xacro
ros2_ws/src/diff_drive_hardware/diff_drive_hardware/: web_server_node.py
ros2_ws/src/diff_drive_hardware/include/diff_drive_hardware/: diff_drive_hardware.hpp
ros2_ws/src/diff_drive_hardware/launch/: diffbot.launch.py
ros2_ws/src/diff_drive_hardware/src/: diff_drive_hardware.cpp
ros2_ws/src/explore_lite/: CMakeLists.txt
ros2_ws/src/explore_lite/include/explore/: explore.h
ros2_ws/src/explore_lite/src/: explore.cpp
ros2_ws/src/frontier_explorer/: package.xml  setup.cfg  setup.py
ros2_ws/src/global_launch/: package.xml  setup.py
ros2_ws/src/global_launch/launch/: launch.py
ros2_ws/src/icm_20948/: CMakeLists.txt  package.xml
ros2_ws/src/icm_20948/include/imu_node/: imu_node.h
ros2_ws/src/icm_20948/launch/: run.launch.xml
ros2_ws/src/icm_20948/src/: imu_node.cpp
ros2_ws/src/ldlidar/: CMakeLists.txt
ros2_ws/src/mower_knife_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/nav2/: package.xml  setup.cfg  setup.py
ros2_ws/src/nav2_bringup/: package.xml  setup.py
ros2_ws/src/nav2_bringup/launch/: localization_launch.py  nav2_bringup.launch.py  navigation_launch.py  slam_launch.py
ros2_ws/src/nav2_bringup/params/: costmap_common_params.yaml  nav2_params.yaml
ros2_ws/src/rosbridge_rust/: Cargo.toml  package.xml
ros2_ws/src/rosbridge_rust/src/: main.rs
ros2_ws/src/slam_tool/: package.xml  setup.py
ros2_ws/src/slam_tool/config/: ekf.yaml  nav2_params.yaml  slam_toolbox_config.yaml
ros2_ws/src/slam_tool/launch/: launch_slam.py
ros2_ws/src/web_server/: README.md  package.xml  readme.md  setup.py
ros2_ws/src/web_ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
wiki/: composition_performance_report.md
(+136 files in other folders)
