<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diff_drive_hardware</name>
  <version>0.0.1</version>
  <description>Differential drive hardware interface for ROS 2</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>serial_driver</depend>
  <depend>asio_cmake_module</depend>
  <depend>io_context</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>xacro</depend>


  <!-- Add system dependency -->
  <build_depend>libserial-dev</build_depend>
  <exec_depend>libserial-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>