<?xml version="1.0"?>
<package format="2">
  <name>global_launch</name>
  <version>0.0.0</version>
  <description>Launch package for managing multiple nodes</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>diff_drive_hardware</exec_depend>
  <exec_depend>web_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>