<package format="3">
  <name>rosbridge_rust</name>
  <version>0.1.0</version>
  <description>Custom Rust ROS 2 WebSocket Bridge Proxy</description>
  <maintainer email="admin@relobot.local">ReloBot Admin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
